--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+tmp/
+
+# pycharm project settings
+.idea
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
